tests/ft/type_checking/valid/empty_types.jk
type Empty;
e = Empty;

type Ok;
type NotOk;

o = Ok;

func takes_ok(o: Ok) {}

o.takes_ok()
