tests/ft/type_checking/invalid/test_f.jk
test invalid() {
	type Inner(i: int);
	instance = Inner(i: 15.4);
}
